# Krish-personal-ai-agent

./: .gitignore  PROGRESS.md  README.md  README.md.md  SOUL.md  TOOLS.md  bot_instance.py  config.py  main.py  pyproject.toml  test_retrieval.py
.github/workflows/: deploy.yml
agent/: classifier.py  context.py  core.py  llm.py  memory_ops.py  tools.py
bot/: handlers.py
memory/: store.py
rag/: indexer.py  retriever.py
scheduler/: jobs.py
